ingress/ing-media.yml
  apiVersion: networking.k8s.io/v1 
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
    name: media
    namespace: media
  spec:
    rules:
      - host: sonarr.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: sonarr
                  port: 
                    number: 8989
      - host: radarr.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: radarr
                  port: 
                    number: 7878
      - host: sabnzbd.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /              
              backend:
                service:
                  name: sabnzbd
                  port: 
                    number: 8080
      - host: library.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /              
              backend:
                service:
                  name: library
                  port: 
                    number: 5299
      - host: transmission.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /              
              backend:
                service:
                  name: transmission
                  port: 
                    number: 9091
      - host: jacket.steenkamps.org
        http:
          paths:
            - pathType: Prefix
              path: /              
              backend:
                service:
                  name: jacket
                  port: 
                    number: 9117
    tls:
    - hosts:
      - sonarr.steenkamps.org
      - radarr.steenkamps.org
      - sabnzbd.steenkamps.org
      - library.steenkamps.org
      - transmission.steenkamps.org
      - jacket.steenkamps.org
      secretName: prod-tls-secret
